--- a/plugins/all_list/list.html
+++ b/plugins/all_list/list.html
@@ -1,5 +1,6 @@
-<ul class="list-group">
+<ul class="">
   {% for item in plugin_context.context.article_list %}
     <li><a href="{{item.url}}">{{item.text}}</a></li>
+    <div class="md_content" data="{{item.short_md_content}}"></div>
   {% endfor %}
 </ul>
