--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="jumbotron">
       <h1>Siteasy</h1>
       <p>Simplest site generator</p>
-      <p><a class="btn btn-primary btn-md" href="/Docs/Quick start.html" role="button">Quick start</a></p>
+      <p><a class="btn btn-primary btn-md" href="/Docs/quick start.html" role="button">Quick start</a></p>
     </div>
         
     
