add markdown render with python

--- a/theme/default/detail.html
+++ b/theme/default/detail.html
@@ -6,5 +6,5 @@
         {% endwith %}
     {% endfor %}
     <div id="md_content"></div>
-    <div id="md" style="display:None;">{{md_content}}</div>
+    <!--    <div id="md" style="display:None;">{{md_content}}</div> -->
 {% endblock %}
