--- a/theme/default/index.html
+++ b/theme/default/index.html
@@ -5,6 +5,6 @@
         {% include "%s"%plugin_context.tpl %}
         {% endwith %}
     {% endfor %}
-    <div id="md_content"></div>
-    <div id="md" style="display:None;">{{md_content}}</div>
+    <div id="md_content">{{md_content}}</div>
+    <!-- <div id="md" style="display:None;">{{md_content}}</div> -->
 {% endblock %}
